Fix day picker input fields visibility

--- a/web/patlms-web/templates/static/template.css
+++ b/web/patlms-web/templates/static/template.css
@@ -50,3 +50,7 @@ body {
   background-color: transparent;
 }
 
+/* Calendar - Picker */
+.input-picker .ws-picker-header > select {
+    display: none;
+}
